<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <EditText
        android:id="@+id/Etb1"
        android:layout_width="372dp"
        android:layout_height="116dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/Etbusqueda"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Buscar"
        android:layout_width="162dp"
        android:layout_height="73dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="125dp"
        android:onClick="navegar"
        android:text="@string/BotonBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Etb1" />

    <Button
        android:id="@+id/iratras"
        android:layout_width="172dp"
        android:layout_height="70dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="200dp"
        android:onClick="REGRE"
        android:text="@string/Botonira"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Buscar" />
</androidx.constraintlayout.widget.ConstraintLayout>